--- a/app/src/main/res/layout/fragment_add_workout_search.xml
+++ b/app/src/main/res/layout/fragment_add_workout_search.xml
@@ -209,7 +209,7 @@
                             android:layout_height="wrap_content"
                             android:text="hr"
                             android:textColor="@color/dotted_red"
-                            android:textSize="24sp"
+                            android:textSize="16sp"
                             android:layout_gravity="center_vertical"
                             android:paddingStart="8dp"
                             android:paddingEnd="16dp" />
@@ -222,9 +222,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="min"
+                            android:text="mins"
                             android:textColor="@color/dotted_red"
-                            android:textSize="24sp"
+                            android:textSize="16sp"
                             android:layout_gravity="center_vertical"
                             android:paddingStart="8dp" />
                     </LinearLayout>
