--- a/app/src/main/res/layout/fragment_edit_workout_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_workout_bottom_sheet.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="24dp"
         android:textColor="@color/black"
         android:fontFamily="@font/dmsans_regular"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:text="Are you sure you want to delete this workout entry?"
         app:layout_constraintTop_toBottomOf="@+id/delete_workout_heading"
