--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -1431,6 +1431,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=" Steps"
+                                    android:layout_marginBottom="2dp"
                                     android:textSize="12sp"
                                     android:textColor="@color/step_today"
                                     android:textStyle="bold"
@@ -1473,6 +1474,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=" Steps"
+                                    android:layout_marginBottom="2dp"
                                     android:textSize="12sp"
                                     android:textColor="@color/active_text_color"
                                     android:textStyle="bold"
@@ -1517,6 +1519,7 @@
                                     android:layout_height="wrap_content"
                                     android:text=" Steps"
                                     android:textSize="12sp"
+                                    android:layout_marginBottom="2dp"
                                     android:textColor="@color/goal_text_color"
                                     android:textStyle="bold"
                                     android:layout_marginEnd="35dp"
