--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -224,9 +224,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
                         android:orientation="vertical">
-
 
                         <!-- Image Section with Overlay Tag -->
                         <RelativeLayout
@@ -240,7 +238,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="200dp"
                                 android:adjustViewBounds="true"
-                                android:src="@drawable/img_rledittop" />
+                                android:scaleType="fitXY"
+                                android:src="@drawable/rl_placeholder" />
 
                             <!-- Workshop Tag on Top of Image -->
                             <ImageView
