--- a/app/src/main/res/layout/fragment_create_routine.xml
+++ b/app/src/main/res/layout/fragment_create_routine.xml
@@ -231,7 +231,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/no_workout_heading"
                     app:layout_constraintBottom_toTopOf="@+id/save_workout_routine_btn"
-                    />
+                    tools:ignore="NotSibling" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
