--- a/app/src/main/res/layout/item_recomendation.xml
+++ b/app/src/main/res/layout/item_recomendation.xml
@@ -44,8 +44,9 @@
                 android:layout_gravity="bottom|center">
                 <ImageView
                     android:id="@+id/overlayIcon"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginBottom="3dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +59,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="#FFFFFF"
                     android:textSize="11sp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginBottom="3dp"
                     android:fontFamily="@font/dmsans_regular"
                     android:textAllCaps="true"
                     app:layout_constraintTop_toTopOf="parent"
