--- a/app/src/main/res/layout/bottomsheet_add_tag.xml
+++ b/app/src/main/res/layout/bottomsheet_add_tag.xml
@@ -40,6 +40,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
         android:fontFamily="@font/dmsans_regular"
+        android:hint="Enter new tag"
         android:gravity="center_horizontal"
         android:padding="@dimen/margin_card_16dp"
         android:maxLength="30"
